add angle input/outpus

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="rotations.js" defer></script>
     <script src="main.js" defer></script>
-    <title>Document</title>
+    <title>4D Visualization</title>
 </head>
 <body>
+    <!-- <form action=""> -->
+        X:<input type="text" id="X" size="5">
+        Y:<input type="text" id="X" size="5">
+        Z:<input type="text" id="X" size="5">
+        <input type="button" id="manual-angle" value="Update"><br>
+    <!-- </form> -->
     <canvas id="canvas" width="500" height="500" style="border:1px solid #000000;"></canvas><br>
     X Rotation:
     <input id="xRot" type="range" min="-25" max="25" value="0" class="slider"><br>
