add pause/play button, fuctionality

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="rotations.js" defer></script>
-    <script src="main.js" defer></script>
+    <script src="js/rotations.js" defer></script>
+    <script src="js/main.js" defer></script>
     <title>4D Visualization</title>
 </head>
 <body>
@@ -16,6 +16,7 @@
         <input type="button" id="manual-angle" value="Update"><br>
     <!-- </form> -->
     <canvas id="canvas" width="500" height="500" style="border:1px solid #000000;"></canvas><br>
+    <input type="button" id="pause-play" value="Pause"><br>
     X Rotation:
     <input id="xRot" type="range" min="-25" max="25" value="0" class="slider"><br>
     Y Rotation:
