refine starting cameras, surfaces

--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
     <input id="yRot" type="range" min="-25" max="25" value="0" class="slider"><br>
     Z Rotation:
     <input id="zRot" type="range" min="-25" max="25" value="0" class="slider"><br>
-    XY Rotation:
+    <!-- W Rotation:
+    <input id="wRot" type="range" min="-25" max="25" value="0" class="slider"><br> -->
+    <br>
+    <!-- XY Rotation:
     <input id="xyRot" type="range" min="-25" max="25" value="0" class="slider"><br>
     YZ Rotation:
     <input id="yzRot" type="range" min="-25" max="25" value="0" class="slider"><br>
     XZ Rotation:
-    <input id="xzRot" type="range" min="-25" max="25" value="0" class="slider"><br>
+    <input id="xzRot" type="range" min="-25" max="25" value="0" class="slider"><br> -->
     XW Rotation:
     <input id="xwRot" type="range" min="-25" max="25" value="0" class="slider"><br>
     YW Rotation:
