try to fix input feedback loop bug

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <!-- <form action=""> -->
-        X:<input type="text" id="X" size="5">
-        Y:<input type="text" id="Y" size="5">
-        Z:<input type="text" id="Z" size="5">
+        X:<input type="text" id="X" size="5" disabled>
+        Y:<input type="text" id="Y" size="5" disabled>
+        Z:<input type="text" id="Z" size="5" disabled>
         <input type="button" id="manual-angle" value="Update"><br>
     <!-- </form> -->
     <canvas id="canvas" width="500" height="500" style="border:1px solid #000000;"></canvas><br>
